Text contrast fixes

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -15,6 +15,9 @@
     .link
         @apply text-blue-600 hover:text-blue-500 dark:text-blue-500 dark:hover:text-blue-400 motion-safe:transition-colors
 
+        &.link-contrast
+            @apply dark:text-blue-400 dark:hover:text-blue-600
+
 @layer components
     .h1
         @apply text-4xl lg:text-5xl font-black
@@ -44,7 +47,7 @@
         @include interactive-box
 
 code
-    @apply text-red-600 dark:text-red-400 font-mono
+    @apply text-red-700 dark:text-red-400 font-mono
 
 .flex *
     @apply min-w-0
